manifests/animals/animals-svc-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: animals-service-1
spec:
  selector:
    app: animals-app-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
