manifests/animals/animals-svc-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: animals-service-2
spec:
  selector:
    app: animals-app-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
