manifests/animals/animals-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: animals-service
spec:
  selector:
    app: animals-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
